--- a/SGF.PRESENTACION/Properties/Resources.resx
+++ b/SGF.PRESENTACION/Properties/Resources.resx
@@ -157,4 +157,10 @@
   <data name="reporte_productos_mayor_stock" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Recursos\Plantillas\Reportes\reporte_productos_mayor_stock.html;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="Aumentar_15" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Recursos\Iconos Coloridos\Aumentar-15.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Decrementar_15" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Recursos\Iconos Coloridos\Decrementar_15.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
