--- a/SGF.PRESENTACION/Properties/Resources.resx
+++ b/SGF.PRESENTACION/Properties/Resources.resx
@@ -163,4 +163,10 @@
   <data name="Decrementar_15" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Recursos\Iconos Coloridos\Decrementar_15.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="detalle_venta" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Recursos\Plantillas\Ventas\detalle_venta.html;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="detalle_venta_cancelado" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Recursos\Plantillas\Ventas\detalle_venta_cancelado.html;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
 </root>
