--- a/SGF.PRESENTACION/Properties/Resources.resx
+++ b/SGF.PRESENTACION/Properties/Resources.resx
@@ -169,4 +169,7 @@
   <data name="detalle_venta_cancelado" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Recursos\Plantillas\Ventas\detalle_venta_cancelado.html;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="Plantilla_Reporte_Ventas" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Recursos\Plantillas\Reportes\Plantilla_Reporte_Ventas.html;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
 </root>
